--- a/package.json
+++ b/package.json
@@ -6,22 +6,37 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:lib": "vite build --mode lib && tsc -p tsconfig.lib.json",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.0",
     "rehype-raw": "^7.0.0",
     "jspdf": "^4.0.0",
-    "react": "^19.2.4",
     "lucide-react": "^0.563.0",
     "html-to-image": "^1.11.13"
+  },
+  "peerDependencies": {
+    "react": ">=18",
+    "react-dom": ">=18"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
+  },
+  "main": "./dist-lib/index.cjs",
+  "module": "./dist-lib/index.js",
+  "types": "./dist-lib/lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist-lib/lib/index.d.ts",
+      "import": "./dist-lib/index.js",
+      "require": "./dist-lib/index.cjs"
+    }
   }
 }
